fix height problem on mobile again
due to new div for the notification

--- a/apps/api/web/static/js/app.css
+++ b/apps/api/web/static/js/app.css
@@ -9,6 +9,10 @@ body {
   line-height: 1.3;
 }
 
+#root > div > div {
+  height: 100%;
+}
+
 .float-right {
   float: right !important;
 }
